Closed Bug 1200825 Opened 10 years ago Closed 10 years ago

Relax the driver crash guard in a few scenarios

Categories

(Core :: Graphics, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla43
Tracking Status
firefox43 --- fixed

People

(Reporter: dvander, Assigned: dvander)

Details

Attachments

(1 file, 1 obsolete file)

For nightly testing, having the crash guard means you're more likely to lose acceleration, which is annoying. In addition we think it's okay for WebGL to not be crash guarded in content processes, since this makes it easier to test/debug, and also lessens the risk of losing WebGL activation.
Attached patch fix (obsolete) — Splinter Review
Attachment #8655658 - Flags: review?(jgilbert)
Comment on attachment 8655658 [details] [diff] [review] fix Review of attachment 8655658 [details] [diff] [review]: ----------------------------------------------------------------- ::: gfx/src/DriverCrashGuard.cpp @@ +57,5 @@ > { > + // We only use the crash guard on non-nightly channels, since the nightly > + // channel is for development and having graphics features perma-disabled > + // is rather annoying. > +#if !defined(NIGHTLY_BUILD) This would be nicer as an early-out, instead of having to enclose the whole block. Also prefer #ifndef.
Attachment #8655658 - Flags: review?(jgilbert) → review+
Attached patch v2Splinter Review
Add an env var to disable crash guards as well.
Attachment #8655658 - Attachment is obsolete: true
Attachment #8655759 - Flags: review?(jgilbert)
Comment on attachment 8655759 [details] [diff] [review] v2 Review of attachment 8655759 [details] [diff] [review]: ----------------------------------------------------------------- ::: gfx/src/DriverCrashGuard.cpp @@ +74,5 @@ > + static bool sEnvChecked = false; > + static bool sAllGuardsDisabled = false; > + if (!sEnvChecked) { > + sAllGuardsDisabled = !!PR_GetEnv("MOZ_DISABLE_CRASH_GUARD"); > + sEnvChecked = true; The way statics work, I believe you should be able to just do: static bool sAllGuardsDisabled = !!PR_GetEnv("MOZ_DISABLE_CRASH_GUARD");
Attachment #8655759 - Flags: review?(jgilbert) → review+
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla43
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: