Relax the driver crash guard on nightly and e10s builds. (bug 1200825, r=jgilbert)