gfx/src/DriverCrashGuard.h
@@ -147,6 +147,7 @@ class GLContextCrashGuard final : public DriverCrashGuard
 {
  public:
   explicit GLContextCrashGuard(dom::ContentParent* aContentParent = nullptr);
+  void Initialize() override;
 
  protected:
   bool UpdateEnvironment() override;
